--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -80,7 +80,11 @@ const paginasPrincipales = [
               <a href="/seguros-salud" class="block px-4 py-3 text-gray-800 hover:text-rp-orange hover:bg-gray-50 transition duration-200 font-medium border-t border-gray-100">
                 Seguros de Salud
               </a>
+              <a href="/seguros-vida/segubeca" class="block px-4 py-3 text-gray-800 hover:text-rp-orange hover:bg-gray-50 transition duration-200 font-medium border-t border-gray-100">
+                Seguros Educativos
+              </a>
             </div>
+
           </div>
         </div>
         
