--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -118,7 +118,7 @@ const { title, description } = Astro.props as Props;
 				--color-border: hsl(17, 24%, 90%);
 			}
 			html {
-				font-family: 'Inter', system-ui, -apple-system, sans-serif;
+				font-family: 'Texta', 'Jost', system-ui, -apple-system, sans-serif;
 				font-size: var(--font-size-base);
 				color: var(--color-text);
 				background-color: var(--rp-white);
