--- a/src/pages/segubecalanding/index.astro
+++ b/src/pages/segubecalanding/index.astro
@@ -4,7 +4,7 @@ import { Image } from 'astro:assets';
 ---
 
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" data-page="segubecalanding">
 
 <head>
   <meta charset="utf-8" />
